[package]
name = "codicon"
version = "2.0.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
keywords = ["codec", "encoding", "decoding", "encoder", "decoder"]
repository = "https://github.com/psilocybin/codicon"
description = "Traits for encoding and decoding"
documentation = "https://docs.rs/codicon"
license = "Apache-2.0"
readme = "README.md"